tests/paczka1/fuzzy1/77045509.err
Error in line 1: 8wwp2d A729 63,6
Error in line 8: 8wwp2d A60 85,7
Error in line 19: 5cNGMRidI A729 82,1
Error in line 14: zZABDiib4H S966 79,8
